# snipsmanager

./: .gitignore  README.md  conftest.py  logger.py  project.py  pyproject.toml  python.json  requirements.txt  test_project.py
