[tool.poetry]
name = "project"
version = "0.1.0"
description = "cs50p final project"
authors = ["Marshall Scott <bacchist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
parsedatetime = "^2.6"
pytest-subprocess = "^1.5.0"
pytest-mock = "^3.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
